# agentob

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  test_analyzer.sh  test_intake.ps1  test_intake.sh  test_large_data.py  test_large_io.sh
.claude/: settings.local.json
ai_service/: Dockerfile  __init__.py  config.py  db_operations.py  models.py  prompt.md  pyproject.toml  pytest.ini  redis_client.py  trace_analyzer.py  worker.py
ai_service/tests/: test_bedrock_service.py  test_config.py  test_real_api.py
analyzer/: Dockerfile  config.py  main.py  pyproject.toml
analyzer/db/: operations.py
analyzer/health/: heartbeat.py
analyzer/models/: span_models.py
analyzer/utils/: redis_client.py  span_analyzer.py  tree_builder.py
dash/api/: .dockerignore  Dockerfile  config.py  main.py  metrics_collector.py  (+2 more)
db/: init.sql
dedup_worker/: .gitignore  Dockerfile  README.md  __init__.py  bloom.proto  bloom_client.py  config.py  generate_grpc.sh  pyproject.toml  setup.sh  worker.py
intake/: Dockerfile  Mulitple Client Secrets Pre-Feedback Diff.txt  README.md  __init__.py  auth.py  config.py  heartbeat.py  main.py  models.py  pyproject.toml  redis_client.py  span_collector.py  span_models.py  trace_collector.py  trace_models.py  webhooks.py
intake/compression/: __init__.py  base.py  language_analyzer.py  models.py  smart_strategy.py  utils.py
llm_worker/: config.py  dockerfile  llm_client.py  main.py  pyproject.toml
outbound/: Dockerfile  entrypoint.sh  pyproject.toml  redis_client.py  worker.py  worker_heartbeat.py
rag_service/: .gitignore  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml  schemas.py  setup.sh
rag_service/indexes/: __init__.py  knowledge_graph_index.py  vector_index.py
test/: SuSe Webhooks Pre-Feedback Diff.txt
(+20 files in other folders)
