[project]
name = "intake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.7",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "fastapi[standard]>=0.117.1",
    "pyjwt[crypto]>=2.10.1",
    "redis>=7.0.0",
    "tiktoken>=0.12.0",
]
