[project]
name = "rag-service"
version = "0.1.0"
description = "RAG service with Knowledge Graph and Vector Index for document ingestion and querying"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "greenlet>=3.0.1",
    "httpx>=0.24.0",
    "llama-index-core>=0.11.22",
    "llama-index-llms-openrouter>=0.2.1",
    "openai>=1.12.0",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.23",
    "uvicorn[standard]>=0.24.0",
]
